//
// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package zetasql;

option java_package = "com.google.zetasql";
option java_multiple_files = true;
option java_outer_classname = "ZetaSqlParseLocationProtos";

// This message stores the start and end byte offsets of a parsed string. It
// also (optionally) stores the name of the file where this parsed string is
// located.
message ParseLocationRangeProto {
  // If present, the name of the file containing the parsed string. It is
  // expected that the start and end of a parsed string would both be located in
  // just one file, so we have only one field to store the filename.
  optional string filename = 1;
  // Byte offset of the first character of the symbol string.
  optional int32 start = 2;
  // Byte offset of the character after the last character of the symbol string.
  optional int32 end = 3;
}
